metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Schedule__c/LiveText__SMS_Schedule__c.object-meta.xml
<CustomObject>
    <description>Object for sending out a scheduled SMS</description>
    <label>SMS Schedule</label>
    <nameField>
        <label>SMS Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Schedules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>