metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Schedule__c/fields/LiveText__Account__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related account object that generated this SMS</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SMS_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>