metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Schedule__c/fields/LiveText__Lead__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lead that generated this SMS</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>SMS_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>