metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Schedule__c/fields/LiveText__LiveText_Number__c.field-meta.xml
<CustomField>
    <fullName>LiveText__LiveText_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The LiveMessage number to send the SMS from.</description>
    <label>LiveMessage Number</label>
    <referenceTo>LiveText__LiveText_Number__c</referenceTo>
    <relationshipName>SMS_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>