metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Schedule__c/fields/LiveText__Message__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Message__c</fullName>
    <description>SMS Message to send</description>
    <label>Message</label>
    <length>480</length>
    <type>LongTextArea</type>
</CustomField>