metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Schedule__c/fields/LiveText__Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Reference_Id__c</fullName>
    <description>Unique Identifier for the flow related to this SMS</description>
    <label>Reference Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>