metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Schedule__c/fields/LiveText__Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Schedule_Date__c</fullName>
    <description>The date and time to send this SMS</description>
    <label>Schedule Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>