metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Schedule__c/fields/LiveText__To_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>LiveText__To_Phone_Number__c</fullName>
    <description>The phone number to send the SMS to</description>
    <label>To Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>